; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_data.c_scale_data_rows.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_data.c_scale_data_rows.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32, i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @scale_data_rows(i64 %0, i32* %1, float %2) #0 {
  %4 = alloca %struct.TYPE_5__, align 8
  %5 = alloca float, align 4
  %6 = alloca i32, align 4
  %7 = bitcast %struct.TYPE_5__* %4 to { i64, i32* }*
  %8 = getelementptr inbounds { i64, i32* }, { i64, i32* }* %7, i32 0, i32 0
  store i64 %0, i64* %8, align 8
  %9 = getelementptr inbounds { i64, i32* }, { i64, i32* }* %7, i32 0, i32 1
  store i32* %1, i32** %9, align 8
  store float %2, float* %5, align 4
  store i32 0, i32* %6, align 4
  br label %10

10:                                               ; preds = %29, %3
  %11 = load i32, i32* %6, align 4
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = icmp slt i32 %11, %14
  br i1 %15, label %16, label %32

16:                                               ; preds = %10
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 2
  %19 = load i32*, i32** %18, align 8
  %20 = load i32, i32* %6, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i32, i32* %19, i64 %21
  %23 = load i32, i32* %22, align 4
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = load float, float* %5, align 4
  %28 = call i32 @scale_array(i32 %23, i32 %26, float %27)
  br label %29

29:                                               ; preds = %16
  %30 = load i32, i32* %6, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %6, align 4
  br label %10

32:                                               ; preds = %10
  ret void
}

declare dso_local i32 @scale_array(i32, i32, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
